contact us begin

--- a/contactUs.html
+++ b/contactUs.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <script src="./assets/js/index.js"></script>
 
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/contactUs.css">
     <title>LuloSoft</title>
 </head>
 
@@ -33,57 +33,184 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="join.html">Join</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="signIn.html">Sign In</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="jobVacancy.html">Jobs</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contactUs.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-
+    <!-- Masthead-->
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row margin">
+                <div class="title col-sm">
+                    <p>Don't be shy<span class="orange">.</span></p>
+                    <p>Let's talk<span class="green">.</span></p>
+                </div>
+            </div>
+            <div class="mastheadInfo">
+                <div class="margin">
+                    <p class="boldText">Email us at</p>
+                    <p>contact@lulosoft.com</p>
+                </div>
+                <div class="margin">
+                    <p class="boldText">Call us at</p>
+                    <p>(786)3553310</p>
+                </div>
+                <div class="">
+                    <div class="row margin">
+                        <p class="boldText">Follow us at</p>
+                    </div>
+                    <div class="row margin">
+                        <div class="col-1 centered">
+                            <a href="https://twitter.com/lulo_soft">
+                                <img border="0" alt="Twitter" src="./assets/images/Home/logo_twitter.svg" width="25"
+                                    height="25">
+                            </a>
+                        </div>
+                        <div class="col-1 centered">
+                            <a href="https://www.linkedin.com/company/lulosoft-llc/">
+                                <img src="./assets/images/Home/logo_linkedin.svg" width="25" height="25">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div id="office">
+        <div class="container">
+            <div class="row margin">
+                <p class="title black boldText">We cant be better located<span class="green">.</span></p>
+            </div>
+            <div class="row margin">
+                <div class="col-sm">
+                    <div class="row">
+                        <div class="col">imagen</div>
+                        <div class="col">
+                            <div class="row">nombbre</div>
+                            <div class="row">pais</div>
+                            <div class="row">telefono</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">imagen</div>
+                        <div class="col">
+                            <div class="row">nombbre</div>
+                            <div class="row">pais</div>
+                            <div class="row">telefono</div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">imagen</div>
+                        <div class="col">
+                            <div class="row">nombbre</div>
+                            <div class="row">pais</div>
+                            <div class="row">telefono</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <form action method="post">
+                        <div class="row">
+                            <div class="input_col col-sm">
+                                <input type="text" placeholder="Name">
+                            </div>
+                            <div class="input_col col-sm">
+                                <input type="text" placeholder="Last Name">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input_col col-sm">
+                                <input type="text" placeholder="Email">
+                            </div>
+                            <div class="input_col col-sm">
+                                <input type="text" placeholder="Phone Number">
+                            </div>
+                        </div>
+                        <div class="form-group file-area">
+                            <input type="file" name="CV" id="CV" required="required" multiple="multiple" />
+                            <div class="file-dummy">
+                                <div class="success">file selected</div>
+                                <div class="default">
+                                    <p class="boldText">Upload your resume.</p>
+                                    <p>Drop file or <span class="green">click here</span> to upload.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit">Upload images</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- footer -->
     <footer>
         <div class="container">
-            <div class="row boldText white">Do you think we are the partner you need?</div>
-            <div class="row orange boldText">Dont be shy!</div>
+            <div class="row boldText white centered">
+                <p>Do you think we are the partner you need?</p>
+            </div>
+            <div class="row orange boldText centered">
+                <p>Dont be shy!</p>
+            </div>
             <div class="row">
                 <div class="col-sm">
                     <div class="row">
                         <div class="col-sm">
-                            <div class="row boldText white">CALI</div>
-                            <div class="row">Alexander Perea</div>
-                            <div class="row">
-                                <span class="boldText white">(+57)</span>3183248120
+                            <div class="row boldText white centered">CALI</div>
+                            <div class="row centered">Alexander Perea</div>
+                            <div class="row centered">
+                                <span class="boldText white">(+57) </span>3183248120
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">ATLANTA</div>
-                            <div class="row">Laura Perea</div>
-                            <div class="row">
-                                <span class="boldText white">(786)</span>3553310
+                            <div class="row boldText white centered">ATLANTA</div>
+                            <div class="row centered">Laura Perea</div>
+                            <div class="row centered">
+                                <span class="boldText white">(786) </span>3553310
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">LOUISVILLE</div>
-                            <div class="row">Juan Espinosa</div>
-                            <div class="row">
-                                <span class="boldText white">(956)</span>2541148
+                            <div class="row centered boldText white">LOUISVILLE</div>
+                            <div class="row centered">Juan Espinosa</div>
+                            <div class="row centered">
+                                <span class="boldText white">(956) </span>2541148
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm">
                     <img src="" alt="" srcset="">
-                    <div class="row">
+                    <div class="row centered">
                         <div class="col-sm-3 boldText white">Terms and conditions</div>
                         <div class="col-sm-3 boldText white">Privacy policy</div>
-                        <div class="col-3">twitter</div>
-                        <div class="col-3">linkedin</div>
+                        <div class="col-3 centered">
+                            <a href="https://twitter.com/lulo_soft">
+                                <img border="0" alt="Twitter" src="./assets/images/Home/logo_twitter.svg" width="25"
+                                    height="25">
+                            </a>
+                        </div>
+                        <div class="col-3 centered">
+                            <a href="https://www.linkedin.com/company/lulosoft-llc/">
+                                <img src="./assets/images/Home/logo_linkedin.svg" width="25" height="25">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164069556-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164069556-1');
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
