--- a/signIn.html
+++ b/signIn.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <script src="./assets/js/index.js"></script>
 
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/signIn.css">
     <title>LuloSoft</title>
 </head>
 
@@ -20,7 +20,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-dark navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger" href="./index.html">
                 <embed src="./assets/images/Home/logo_lulosoft.svg" alt="Lulosoft" />
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -33,57 +33,109 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="join.html">Join</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="signIn.html">Sign In</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="jobVacancy.html">Jobs</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contactUs.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <div id="signIn" class="row">
+        <div class="col-sm">
+            <div class="row margin title black boldText">
+                <p>Welcome to lulosoft<span class="green">.</span></p>
+            </div>
+            <div class="row margin">
+                <p>We are a versatile team of engeneers and computer scientists with a passion for technology.</p>
+            </div>
+            <div class="row margin">
+                <p><a href="" class="green">Sign in </a> below to continue.</p>
+            </div>
+            <form action="post" class="login">
+                <div class="input_col">
+                    <input type="email" placeholder="Email">
+                </div>
+                <div class="input_col">
+                    <input type="password" placeholder="Password">
+                </div>
+                <!-- <div class="row">
+                    <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe">
+                </div> -->
+                <div class="row margin">
+                    <p><a href="" class="frgt green boldText">Forgot your password?</a></p>
+                </div>
+                <button id="login_btn">SIGN IN</button>
+            </form>
+        </div>
+        <div class="col-sm">
+            <img src="./assets/images/Sign in/img_sign_in.png" alt="Lulosoft" srcset="">
+        </div>
+    </div>
 
     <!-- footer -->
     <footer>
         <div class="container">
-            <div class="row boldText white">Do you think we are the partner you need?</div>
-            <div class="row orange boldText">Dont be shy!</div>
+            <div class="row boldText white centered">
+                <p>Do you think we are the partner you need?</p>
+            </div>
+            <div class="row orange boldText centered">
+                <p>Dont be shy!</p>
+            </div>
             <div class="row">
                 <div class="col-sm">
                     <div class="row">
                         <div class="col-sm">
-                            <div class="row boldText white">CALI</div>
-                            <div class="row">Alexander Perea</div>
-                            <div class="row">
-                                <span class="boldText white">(+57)</span>3183248120
+                            <div class="row boldText white centered">CALI</div>
+                            <div class="row centered">Alexander Perea</div>
+                            <div class="row centered">
+                                <span class="boldText white">(+57) </span>3183248120
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">ATLANTA</div>
-                            <div class="row">Laura Perea</div>
-                            <div class="row">
-                                <span class="boldText white">(786)</span>3553310
+                            <div class="row boldText white centered">ATLANTA</div>
+                            <div class="row centered">Laura Perea</div>
+                            <div class="row centered">
+                                <span class="boldText white">(786) </span>3553310
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">LOUISVILLE</div>
-                            <div class="row">Juan Espinosa</div>
-                            <div class="row">
-                                <span class="boldText white">(956)</span>2541148
+                            <div class="row centered boldText white">LOUISVILLE</div>
+                            <div class="row centered">Juan Espinosa</div>
+                            <div class="row centered">
+                                <span class="boldText white">(956) </span>2541148
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm">
                     <img src="" alt="" srcset="">
-                    <div class="row">
+                    <div class="row centered">
                         <div class="col-sm-3 boldText white">Terms and conditions</div>
                         <div class="col-sm-3 boldText white">Privacy policy</div>
-                        <div class="col-3">twitter</div>
-                        <div class="col-3">linkedin</div>
+                        <div class="col-3 centered">
+                            <a href="https://twitter.com/lulo_soft">
+                                <img border="0" alt="Twitter" src="./assets/images/Home/logo_twitter.svg" width="25"
+                                    height="25">
+                            </a>
+                        </div>
+                        <div class="col-3 centered">
+                            <a href="https://www.linkedin.com/company/lulosoft-llc/">
+                                <img src="./assets/images/Home/logo_linkedin.svg" width="25" height="25">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164069556-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164069556-1');
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
