--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-dark navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <a class="navbar-brand js-scroll-trigger" href="./index.html">
                 <embed src="./assets/images/Home/logo_lulosoft.svg" alt="Lulosoft" />
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
